	* Fixed bug #7523: Description of properties is missing in install tool (Thanks to Steffen Kamper)

2008-02-26  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added feature #7667: htmlArea RTE: Usability improvements in table operations
	* Fixed bug #7671: htmlArea RTE configuration variable "Add default User TSonfig RTE configuration" not working. Thanks to Jan Persson.

2008-02-25  Ernesto Baschny  <ernst@cron-it.de>

	* Follow-up on bug #1697 (bug #7626): Timezone handling in datetime/time fields was broken, causing time to jump +serverTZ on each record saving.
	* Fixed bug #7626: Corrected handling of so called "half-hour" timezones (e.g. +0430) which caused wrong data to be saved in time/datetime fields.

2008-02-25  Michael Stucki  <michael@typo3.org>

	* Follow-up on issue #7526: Add configuration option $TYPO3_CONF_VARS[BE][loginNewsTitle] to t3lib/config_default.php (Thanks to Steffen Kamper)
	* Follow-up on issue #6037: Replace leading character (makes sure that strpos() result is not 0) with result type check (Thanks to Oliver Hader)

2008-02-23  Oliver Hader  <oh@inpublica.de>

	* Followup to #6885: Changing $GLOBALS['TSFE'] to $this inside tslib_fe

2008-02-23  Ingmar Schlecht  <ingmar@typo3.org>

	* Release of TYPO3 4.2.0beta2a

2008-02-23  Ingmar Schlecht  <ingmar@typo3.org>

	* Follow-up on issue #7625: Completely removed the CSS instruction in question as it seemed to be not needed and only caused extra fuss

2008-02-22  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0beta2

2008-02-22  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7445: Malformed translated locallang causes PHP crash (thanks to Francois Suter)
	* Issue #7307: Bugfixes for "Open Documents" extension - Part 1
	  - Changed getSetUpdateSignal() function in t3lib_BEfunc and added hook possibility
	  - Used hook for tx_opendocs to be updated when opening & closing a document
	  - Several bugfixes and new features for tx_opendocs
